scripts/nullaway/annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8.txt
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/JDealsController.java:104: error: [NullAway] initializer method does not guarantee @NonNull fields curUser (line 64), frame (line 79) are initialized along all control-flow paths (remember to check for exceptions or early returns).
    public JDealsController(RunType type) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/JDealsController.java:54: error: [NullAway] @NonNull static field scan not initialized
    public static Scanner scan;
                          ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/JDealsController.java:329: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/entity/Order.java:116: error: [NullAway] initializer method does not guarantee @NonNull field date (line 101) is initialized along all control-flow paths (remember to check for exceptions or early returns).
    public Order(ArrayList<ItemStack> items) {
           ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/Store.java:105: error: [NullAway] dereferenced expression item is @Nullable
        if (this.getItem(item.getId()) != null) {
                             ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/Store.java:138: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return null;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/controller/Store.java:369: error: [NullAway] unboxing of a @Nullable value
                if (map.get(d.getClass())) {
                   ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/libs/menu/CliMenu.java:136: error: [NullAway] dereferenced expression prev is @Nullable
                    return prev.runMenu();
                               ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/main/entity/catalogue/Supply.java:64: error: [NullAway] returning @Nullable expression from method with @NonNull return type
        return supplier;
        ^
    (see http://t.uber.com/nullaway )
../annotator/url2b4a2d655b_Yehonal_unisa_prog2_jdm_tgz-pJ8-com_jdeals_tests_TestUserBuyingJ8/src/com/jdeals/libs/JTextFieldFilter.java:62: error: [NullAway] assigning @Nullable expression to @NonNull field
    protected String acceptedChars = null;
                     ^
    (see http://t.uber.com/nullaway )
Note: Some input files use or override a deprecated API.
Note: Recompile with -Xlint:deprecation for details.
Note: Some input files use unchecked or unsafe operations.
Note: Recompile with -Xlint:unchecked for details.
10 errors
